qtsvg-opensource-src (5.1.1-3) UNRELEASED; urgency=low

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 13 Sep 2013 17:18:56 -0300

qtsvg-opensource-src (5.1.1-2) unstable; urgency=low

  * Tighten Qt 5 build dependencies.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 30 Aug 2013 23:11:49 -0300

qtsvg-opensource-src (5.1.1-1) unstable; urgency=low

  * New upstream release.
  * Update symbols file with buildds' logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 30 Aug 2013 17:49:40 -0300

qtsvg-opensource-src (5.1.0-2) unstable; urgency=low

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 11 Aug 2013 13:19:46 -0300

qtsvg-opensource-src (5.1.0-1) experimental; urgency=low

  * New upstream release.
  * Fix watch file.
  * Update symbols file.
  * Bump Qt build dependencies to 5.1.0~.
  * Adjust install files.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 11 Jul 2013 22:23:47 -0300

qtsvg-opensource-src (5.0.2-3) experimental; urgency=low

  * Build the documentation shipped with this submodule as a build-indep task:
    - Add the necessary indep build dependencies:
      * qttools5-dev-tools to use qhelpgenerator.
      * libqt5sql5-sqlite to generate qch doc.
    - Build and create packages for qch and HTML doc formats.
  * Update symbols file.
  * Make qtsvg5-dbg M-A same to allow coinstalability.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 20 Jun 2013 19:23:06 -0300

qtsvg-opensource-src (5.0.2-2) experimental; urgency=low

  [ Pino Toscano ]
  * Update symbols file.
  * Update Vcs-Browser header.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 29 Apr 2013 09:26:26 -0300

qtsvg-opensource-src (5.0.2-1) experimental; urgency=low

  * Initial release (Closes: #697509).

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 22 Apr 2013 15:06:06 -0300